# Movie-Recommendation-System

./: README.md  pyproject.toml
data/raw/: movies.csv  ratings.csv
notebooks/: eda.ipynb
src/: app.py
src/data/: loaders.py  preprocessing.py
src/features/: engineering.py
src/models/: collaborative.py  content_based.py
src/templates/: index.html
src/tests/: test_recommender.py
src/utils/: helpers.py
