[tool.poetry]
name = "movie-recommender"
version = "0.1.0"
description = "A movie recommendation system using collaborative and content-based filtering."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
scikit-learn = "^0.24.0"
nltk = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"